2.0.3
	New Features
		* Drawable now has onTouch events within itself
		* DrawableObject.getParentLayer()
		* Scene.toastLong and Scene.toastShort are helpers for showing Toast messages
		* Drawable.setZ, Drawable.getZ - for use with new DrawOrder.Z_ORDER
		* Drawable.getRotation
		* MathHelper.pointInShape - determines whether a point is inside a Sprites shape/polygon
	
	Changes
		* DrawableObject.isOnScreen() returns FALSE if it is not added to a Layer
	
	Bug Fixes
		* Drawable is now public, previously was not. This prevented 'onTouch(Drawable' methods from being used.
		* Point.getY() returned wrong value if it had a parent
		* DrawableObjet.setSize did not modify height
		* TextSprite was being silly, and was looking for FontTexture intead of TextTexture
		* PhysicalSprite did not take into account current rotaton when creating its Body 
		* TextureAtlas was overlapping inserted Textures
		* Touchables are now checked against their rotated position, previously rotation wasn't considered

30/06/10 - 2.0.2
	Another quick minor update, sorry for having so many packed together - obviously with the new release came a few unexpected bugs.
	The Droid/Milestone bug seems to have been fixed now.
	
	New Features
		* Vibrator class, for vibrating the device
		* Accelerometer and OnAccelerometerChange classes, for handling accelerometer changes and recognising device shakes
		* Scene.setClearColour changes glClearColor to your own values
		
	Changes
		* Default glClearColor is now black, instead of blue
		
	Bug Fixes
		* Fixed issue with Droid/Milestone. It seems they don't really support VBOs, and hackBrokenDevices wasn't picking that up
		* Texture paths would be incorrectly modified if RokonActivity.setGraphicsPath wasn't called

29/06/10 - 2.0.1
	A small update, released quickly, it seems the engine wasn't compatable with anything pre-2.2
	Should be fixed now, my bad!
	
	Bug Fixes
		* Compatability with pre-FroYo, it was a bug with how MotionEvent was used.
